--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,4 +1,3 @@
-<h1>Users#show</h1>
 <div class="row">
   <aside class="col-xs-4">
     <div class="panel panel-default">
@@ -8,8 +7,8 @@
       <div class="panel-body">
         <img class="media-object img-rounded img-responsive" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
       </div>
-      <%= render 'relationships/follow_button', user: @user %>
     </div>
+    <%= render 'relationships/follow_button', user: @user %>
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
@@ -17,6 +16,6 @@
       <li class="<%= 'active' if current_page?(followings_user_path(@user)) %>"><%= link_to followings_user_path(@user) do %>Followings <span class="badge"><%= @count_followings %></span><% end %></li>
       <li class="<%= 'active' if current_page?(followers_user_path(@user)) %>"><%= link_to followers_user_path(@user) do %>Followers <span class="badge"><%= @count_followers %></span><% end %></li>
     </ul>
-    <%= render 'microposts/microposts', microposts: @microposts %>
+    <%= render 'users', users: @followings %>
   </div>
 </div>
